--- a/config/boards/shields/corne1/corne1.dtsi
+++ b/config/boards/shields/corne1/corne1.dtsi
@@ -5,7 +5,7 @@
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
-
+// #include <dt-bindings/nano33ble.h>
 // #include <layouts/foostan/corne/5column.dtsi>
 // #include <layouts/foostan/corne/6column.dtsi>
 
@@ -31,21 +31,52 @@
     // AIN0 = P0.02 (A5 in nano_33_ble)
     // AIN4 = P0.28 (A6 in nano_33_ble)
     // AIN1 = P0.03 (A7 in nano_33_ble)
-    channel@3 {
-        reg = <3>;
-        zephyr,input-positive = <NRF_SAADC_AIN3>;
-        zephyr,gain = "ADC_GAIN_2";
-        zephyr,reference = "ADC_REF_VDD_1_4";
-        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 40)>;
+    channel@0 {
+        reg = <0>;
+        zephyr,input-positive = <NANO_33_BLE_A0>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
         zephyr,resolution = <12>;
     };
-
+    channel@1 {
+        reg = <1>;
+        zephyr,input-positive = <NANO_33_BLE_A1>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
+        zephyr,resolution = <12>;
+    };
+    channel@2 {
+        reg = <2>;
+        zephyr,input-positive = <NANO_33_BLE_A2>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
+        zephyr,resolution = <12>;
+    };
+    channel@3 {
+        reg = <3>;
+        zephyr,input-positive = <NANO_33_BLE_A3>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
+        zephyr,resolution = <12>;
+    };
     channel@4 {
         reg = <4>;
-        zephyr,input-positive = <NRF_SAADC_AIN4>;
-        zephyr,gain = "ADC_GAIN_2";
-        zephyr,reference = "ADC_REF_VDD_1_4";
-        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 40)>;
+        zephyr,input-positive = <NANO_33_BLE_A4>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
+        zephyr,resolution = <12>;
+    };
+    channel@5 {
+        reg = <5>;
+        zephyr,input-positive = <NANO_33_BLE_A5>;
+        zephyr,gain = "ADC_GAIN_1_2";
+        zephyr,reference = "ADC_REF_INTERNAL";
+        zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 10)>;
         zephyr,resolution = <12>;
     };
 };
@@ -53,46 +84,31 @@
 / {
     chosen {
         // zephyr,display = &oled;
-        zmk,kscan = &kscan1;
+        zmk,kscan = &kscan2;
         zmk,physical-layout = &physical_layout0;
     };
     
     physical_layout0: physical_layout_0 { // First physical layout, use different naming for other layouts
         compatible = "zmk,physical-layout";
         display-name = "Default Layout";
-        kscan = <&kscan1>; // Label of the kscan node, optional if all layouts use the same
+        kscan = <&kscan2>; // Label of the kscan node, optional if all layouts use the same
         transform = <&default_transform>; // Label of the matrix transform for this layout
     };
+
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <12>;
         rows = <4>;
-// | SW1  | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  | SW1  |
-// | SW7  | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  | SW7  |
-// | SW13 | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 | SW13 |
-//                      | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
+// |  SW1  |  SW2  |  HE1  |  HE2  |  HE3  |  SW3  | |  SW3  |  HE3  |  HE2  |  HE1  |  SW2  |  SW1  |
+// |  SW4  |  SW5  |  HE4  |  HE5  |  HE6  |  SW6  | |  SW6  |  HE6  |  HE5  |  HE4  |  SW5  |  SW4  |
+//         |  SW7  |  SW8  |  SW9  | SW10  | SW11  | | SW11  | SW10  |  SW9  |  SW8  |  SW7  | 
+//                         |  SW12 | SW13  | SW14  | | SW14  | SW13  | SW12  |
         map = <
-RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
-RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-                        RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
-        >;
-    };
-
-    five_column_transform: keymap_transform_1 {
-        compatible = "zmk,matrix-transform";
-        columns = <10>;
-        rows = <4>;
-// | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  |
-// | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  |
-// | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 |
-//               | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
-        map = <
-RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10)
-RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10)
-RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10)
-                        RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
+    RC(0,0) RC(0,1) RC(3,0) RC(3,1) RC(3,2) RC(0,4)   RC(0,5) RC(3,5) RC(3,6) RC(3,7) RC(0,8) RC(0,9)
+    RC(1,0) RC(1,1) RC(4,0) RC(4,1) RC(4,2) RC(1,4)   RC(1,5) RC(4,5) RC(4,6) RC(4,7) RC(1,8) RC(1,9)
+            RC(2,1) RC(0,2) RC(0,3) RC(1,3) RC(2,4)   RC(2,5) RC(1,6) RC(0,6) RC(0,7) RC(2,8)
+                            RC(1,2) RC(2,2) RC(2,3)   RC(2,6) RC(2,7) RC(1,7)
         >;
     };
 
@@ -102,38 +118,95 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
 
         diode-direction = "col2row";
         row-gpios
-            = <&nano_33_ble 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&nano_33_ble 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&nano_33_ble 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&nano_33_ble 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            = <&nano_33_ble 12 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&nano_33_ble 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&nano_33_ble 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
 
     };
+    kscan2: kscan2{
+        compatible = "zmk,kscan-composite";
+        wakeup-source;
+        rows = <4>;
+        columns = <12>;
+        gpio-matrix {
+            kscan = <&kscan0>;
+            row-offset = <0>;
+            col-offset = <0>;
+        };
+        adc-direct {
+            kscan = <&kscan1>;
+            row-offset = <3>;
+            col-offset = <0>;
+        };
+    };
+    
 
+        // 1.0 o 2.1
+        // 1.40 -> 0.92 GKS norm =  0.48
+        // 0.92 -> 0.60 DRV norm =  0.32 ~= 0.402
+        // 1.8 -> 2.6   GKS up   =  0.8
+        // 1.2 -> 1.96  DRV up   =  0.76
+// high power mode: multiple adc reads and average
+// low power mode: single adc read with lower resolution
     kscan1: kscan1{
         compatible = "zmk,kscan-adc-direct";
         resolution = <12>;
         pulse-read;
+        read-turn-on-time= <50>;
         wait-period-idle= <5>;
         wait-period-press= <1>;
         
         top {
-            enable-gpios= <&nano_33_ble 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
-            switch-pressed-is-higher;
+            enable-gpios= <&nano_33_ble_gpio_a 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
+            // switch-pressed-is-higher;
+            switch-height = <3300>;
+            first {
+                io-channels = <&adc 0>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <2070>;
+                calibration-max = <3260>;
+            };
+            second {
+                io-channels = <&adc 1>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <2100>;
+                calibration-max = <3250>;
+            };
+            third {
+                io-channels = <&adc 2>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <1980>;
+                calibration-max = <3215>;
+            };
+        };
+        bot {
+            enable-gpios= <&nano_33_ble_gpio_a 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
+            // switch-pressed-is-higher;
             switch-height = <3300>;
             first {
                 io-channels = <&adc 3>;
-                press-point = <200>;
-                release-point = <100>;
-                calibration-min = <0>;
-                calibration-max = <4095>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <2070>;
+                calibration-max = <3220>;
             };
             second {
                 io-channels = <&adc 4>;
-                press-point = <200>;
-                release-point = <100>;
-                calibration-min = <0>;
-                calibration-max = <4095>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <2140>;
+                calibration-max = <3270>;
+            };
+            third {
+                io-channels = <&adc 5>;
+                press-point = <2300>;
+                release-point = <2500>;
+                calibration-min = <2020>;
+                calibration-max = <3250>;
             };
         };
     };
