--- a/config/boards/shields/corne1/corne1.dtsi
+++ b/config/boards/shields/corne1/corne1.dtsi
@@ -108,11 +108,11 @@
     RC(0,0) RC(0,1) RC(3,0) RC(3,1) RC(3,2) RC(0,4)   RC(0,5) RC(3,5) RC(3,6) RC(3,7) RC(0,8) RC(0,9)
     RC(1,0) RC(1,1) RC(4,0) RC(4,1) RC(4,2) RC(1,4)   RC(1,5) RC(4,5) RC(4,6) RC(4,7) RC(1,8) RC(1,9)
             RC(2,1) RC(0,2) RC(0,3) RC(1,3) RC(2,4)   RC(2,5) RC(1,6) RC(0,6) RC(0,7) RC(2,8)
-                            RC(1,2) RC(2,2) RC(2,3)   RC(2,6) RC(2,7) RC(1,7)
+    RC(3,3) RC(3,4)         RC(1,2) RC(2,2) RC(2,3)   RC(2,6) RC(2,7) RC(1,7)         RC(3,8)  RC(3,9)
         >;
     };
 
-    kscan0: kscan {
+    kscan-gpio: kscan-gpio {
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
 
@@ -124,20 +124,25 @@
             ;
 
     };
-    kscan2: kscan2{
+    kscan: kscan {
         compatible = "zmk,kscan-composite";
         wakeup-source;
         rows = <4>;
         columns = <12>;
         gpio-matrix {
-            kscan = <&kscan0>;
+            kscan = <&kscan-gpio>;
             row-offset = <0>;
             col-offset = <0>;
         };
         adc-direct {
-            kscan = <&kscan1>;
+            kscan = <&kscan-adc>;
             row-offset = <3>;
             col-offset = <0>;
+        };
+        select-switches {
+            kscan = <&kscan-selector>;
+            row-offset = <3>;
+            col-offset = <3>;
         };
     };
     
@@ -149,7 +154,7 @@
         // 1.2 -> 1.96  DRV up   =  0.76
 // high power mode: multiple adc reads and average
 // low power mode: single adc read with lower resolution
-    kscan1: kscan1{
+    kscan-adc: kscan-adc {
         compatible = "zmk,kscan-adc-direct";
         resolution = <12>;
         pulse-read;
@@ -157,60 +162,21 @@
         wait-period-idle= <5>;
         wait-period-press= <1>;
         
-        top {
+        kscan-adc-top: top {
             enable-gpios= <&nano_33_ble_gpio_a 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
             // switch-pressed-is-higher;
             switch-height = <3300>;
-            first {
-                io-channels = <&adc 0>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <2070>;
-                calibration-max = <3260>;
-            };
-            second {
-                io-channels = <&adc 1>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <2100>;
-                calibration-max = <3250>;
-            };
-            third {
-                io-channels = <&adc 2>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <1980>;
-                calibration-max = <3215>;
-            };
         };
-        bot {
+        kscan-adc-bot: bot {
             enable-gpios= <&nano_33_ble_gpio_a 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
             // switch-pressed-is-higher;
             switch-height = <3300>;
-            first {
-                io-channels = <&adc 3>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <2070>;
-                calibration-max = <3220>;
-            };
-            second {
-                io-channels = <&adc 4>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <2140>;
-                calibration-max = <3270>;
-            };
-            third {
-                io-channels = <&adc 5>;
-                press-point = <2300>;
-                release-point = <2500>;
-                calibration-min = <2020>;
-                calibration-max = <3250>;
-            };
         };
     };
-
+    kscan-selector: kscan-selector {
+        compatible = "zmk,kscan-gpio-direct"; //TODO implement custom driver with pull_up toggling
+        wakeup-source;
+    };
     // TODO: per-key RGB node(s)?
 };
 
