--- a/config/corne1.conf
+++ b/config/corne1.conf
@@ -3,6 +3,9 @@
 # CONFIG_WS2812_STRIP=y
 
 CONFIG_ADC=y
+CONFIG_INPUT=y
+CONFIG_KSCAN=y
+CONFIG_ZMK_POINTING=y
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
