--- a/config/boards/shields/corne1/corne1.dtsi
+++ b/config/boards/shields/corne1/corne1.dtsi
@@ -186,13 +186,89 @@
         compatible = "he,raw-signal-processor";
         #input-processor-cells = <0>;
         matrix-size = <2 3>;
-        filter-coefficients = <0x3f9490b 0xd92ae7c 0x3fa490b 0xd92ae7c 0x3f9490b 0xd92ae7c 0x3ff0000 0x0000000 0xbff8f9e 0x1700768 0x3fe485f 0xa92649f>;
+        working-area = <150 3150>;
+        // I lost so many hours debugging this with the wrong values, please check them carefully in the future
+        filter-coefficients = <0x3ca485df 0x3d2485df 0x3ca485df 0x3f800000 0xbfc7cf71 0x3f242f9d>;
+    };
+
+    heTrans: blank-he-transparent {
+        compatible = "he,input-processor-blank-he";
+        #input-processor-cells = <0>;
+        log;
+    };
+    henone: blank-he-block {
+        compatible = "he,input-processor-blank-he";
+        #input-processor-cells = <0>;
+        block;
+    };
+    he_adj: he-adjustable-actuation{
+        compatible = "he,input-processor-adjustable-actuation";
+        #input-processor-cells = <1>;
+        sensitivity = <30>;
+        kscan-forwarder = <&kscan_forwarder>;
+        kscan-passthrough-position = <2700>;
+        keymap-size = <12>;
+        kscan-passthrough;
+    };
+
+    he_transform: he_transform {// mapping of he sensors before going to kscan-composite but with he,input-processor-matrix-offset applied
+        compatible = "zmk,matrix-transform";
+        columns = <8>;
+        rows = <2>;
+        // |  HE1  |  HE2  |  HE3  |  |  HE3  |  HE2  |  HE1  |
+        // |  HE4  |  HE5  |  HE6  |  |  HE6  |  HE5  |  HE4  |
+        map = <
+            RC(0,0) RC(0,1) RC(0,2)    RC(0,5) RC(0,6) RC(0,7)
+            RC(1,0) RC(1,1) RC(1,2)    RC(1,5) RC(1,6) RC(1,7)
+        >;
+    };
+
+    he_keymap: he-keymap {
+        compatible = "he,input-processor-keymap";
+        #input-processor-cells = <1>;
+        transform = <&he_transform>;
+        layer0 {
+            input-processors = <
+                &he_adj 0 &he_adj 1 &he_adj 2   &he_adj 3 &he_adj 4  &he_adj 5
+                &he_adj 6 &he_adj 7 &he_adj 8   &he_adj 9 &he_adj 10 &he_adj 11
+            >;
+        };
+    };
+
+    he_mat_offset: he_mat_offset{
+        compatible = "he,input-processor-matrix-offset";
+        #input-processor-cells = <2>;
     };
     
-    input_listener {
-        compatible = "zmk,input-listener";
+    split_inputs {
+        #address-cells = <1>;
+        #size-cells = <0>;
+        he_input_split: he_input_split@0 {
+            compatible = "zmk,input-split";
+            reg = <0>;
+        };
+    };
+
+    central_listener: central_listener {
+        compatible = "he,input-listener";
+        status = "disabled";
         device = <&kscan_adc>;
         input-processors = <&raw_sp>;
+        layer0 {
+            layers = <0>;
+            input-processors = <&he_keymap 0>;
+            // input-processors = <&henone>;
+        };
+    };
+    peripheral_listener: peripheral_listener {
+        compatible = "he,input-listener";
+        status = "disabled";
+        device = <&he_input_split>;
+        layer0 {
+            layers = <0>;
+            input-processors = <&he_keymap 0>;
+            // input-processors = <&henone>;
+        };
     };
 
 };
