--- a/config/corne1.conf
+++ b/config/corne1.conf
@@ -6,6 +6,34 @@ CONFIG_ADC=y
 CONFIG_INPUT=y
 CONFIG_KSCAN=y
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_SPLIT=y
+# CONFIG_ZMK_LOG_LEVEL=3
+
+# DON'T TOUCH, i spent two days debugging this
+CONFIG_INPUT_THREAD_STACK_SIZE=1024
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=1024
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=1024
+# CONFIG_NO_OPTIMIZATIONS=y
+
+CONFIG_DEBUG=y
+# CONFIG_DEBUG_THREAD_INFO=y
+# CONFIG_EXCEPTION_STACK_TRACE=y
+# CONFIG_HW_STACK_PROTECTION=y
+
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_50PPM=y
+# CONFIG_CLOCK_CONTROL_NRF_K32SRC_SYNTH=y
+CONFIG_COMPILER_SAVE_TEMPS=y
+CONFIG_MPU_STACK_GUARD=y
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_ISR_STACK_SIZE=4096
+CONFIG_BT_CTLR_RX_PRIO_STACK_SIZE=512
+CONFIG_BT_L2CAP_TX_BUF_COUNT=12
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
+
+# CONFIG_THREAD_ANALYZER=y
+# CONFIG_THREAD_ANALYZER_AUTO=y
+# CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=5
+# CONFIG_THREAD_NAME=y
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
