--- a/config/partial_gauss.conf
+++ b/config/partial_gauss.conf
@@ -2,11 +2,12 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-CONFIG_ADC=y
-CONFIG_INPUT=y
-CONFIG_KSCAN=y
-CONFIG_ZMK_POINTING=y
-CONFIG_ZMK_SPLIT=y
+# CONFIG_ADC=y
+# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=10
+# CONFIG_INPUT=y
+# CONFIG_KSCAN=y
+# CONFIG_ZMK_POINTING=y
+# CONFIG_ZMK_INPUT_SPLIT=y
 # CONFIG_ZMK_LOG_LEVEL=3
 
 # DON'T TOUCH, i spent two days debugging this
