--- a/config/boards/shields/partial_gauss/partial_gauss.zmk.yml
+++ b/config/boards/shields/partial_gauss/partial_gauss.zmk.yml
@@ -10,7 +10,7 @@ features:
   - keys
   # - display
   # - underglow
-  - studio
+  # - studio
 siblings:
   - partial_gauss_left
   - partial_gauss_right
